--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,12 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+title: Cristian Mejía
+description: assionate about data analytics. My research projects consist on analyzing networks of patent and academic articles to leverage funding allocation strategies.
 
 # Email and twitter are optional:
-email:
-twitter_username:
+email: cristianmejia00@gmail.com
+twitter_username: @c_mejia00
 
 # Set this to true to get LaTeX math equation support
 use_math:
