correct error in line 14

--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: Cristian Mejía
 description: assionate about data analytics. My research projects consist on analyzing networks of patent and academic articles to leverage funding allocation strategies.
 
 # Email and twitter are optional:
-email: cristianmejia00@gmail.com
-twitter_username: @c_mejia00
+# email: cristianmejia00@gmail.com
+# twitter_username: @c_mejia00
 
 # Set this to true to get LaTeX math equation support
 use_math:
