--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Cristian Mejía
-description: assionate about data analytics. My research projects consist on analyzing networks of patent and academic articles to leverage funding allocation strategies.
+description: Passionate about data analytics. My research projects consist on analyzing networks of patent and academic articles to leverage funding allocation strategies.
 
 # Email and twitter are optional:
 # email: cristianmejia00@gmail.com
