--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: Passionate about data analytics. My research projects consist on an
 use_math:
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics:
+google_analytics: UA-163472958-1
 
 # Everything below here can be ignored, unless you want to change the theme entirely
 theme: minima
