--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ use_math:
 google_analytics: UA-163472958-1
 
 # Everything below here can be ignored, unless you want to change the theme entirely
-theme: architec
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
   - jekyll-gist
