--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: Passionate about data analytics. My research projects consist on an
 
 # Email and twitter are optional:
 email: cristianmejia00@gmail.com
-twitter_username: @c_mejia00
+# twitter_username: @c_mejia00
 
 # Set this to true to get LaTeX math equation support
 use_math:
