--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Cristian Mejía
-description: Passionate about data analytics. My research projects consist on analyzing networks of patent and academic articles to leverage funding allocation strategies.
+# description: Passionate about data analytics. My research projects consist on analyzing networks of patent and academic articles to leverage funding allocation strategies.
 
 # Email and twitter are optional:
-email: cristianmejia00@gmail.com
+# email: cristianmejia00@gmail.com
 # twitter_username: @c_mejia00
 
 # Set this to true to get LaTeX math equation support
